--- a/index.html
+++ b/index.html
@@ -20,19 +20,8 @@
 
     <link
       rel="stylesheet"
-      href="assets/web/assets/mobirise-icons/mobirise-icons.css"
+      href="assets/css/all.min.css"
     />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" />
-    <link
-      rel="stylesheet"
-      href="assets/bootstrap/css/bootstrap-reboot.min.css"
-    />
-    <link rel="stylesheet" href="assets/tether/tether.min.css" />
-    <link rel="stylesheet" href="assets/animatecss/animate.min.css" />
-    <link rel="stylesheet" href="assets/dropdown/css/style.css" />
-    <link rel="stylesheet" href="assets/socicon/css/styles.css" />
-    <link rel="stylesheet" href="assets/theme/css/style.css" />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
@@ -48,11 +37,11 @@
     <link
       rel="preload"
       as="style"
-      href="assets/mobirise/css/mbr-additional.css?v=yOJuHI"
+      href="assets/mobirise/css/mbr-additional.min.css?v=yOJuHI"
     />
     <link
       rel="stylesheet"
-      href="assets/mobirise/css/mbr-additional.css?v=yOJuHI"
+      href="assets/mobirise/css/mbr-additional.min.css?v=yOJuHI"
       type="text/css"
     />
 
@@ -104,7 +93,7 @@
           <div class="navbar-brand">
             <span class="navbar-caption-wrap"
               ><a
-                class="navbar-caption text-white text-primary display-4"
+                class="nav-link link navbar-caption text-white text-primary display-4"
                 href="https://functor-software.hr/"
                 >functor-software.hr</a
               ></span
@@ -333,7 +322,7 @@
                 class="zoom-container"
                 title="Visit Vedran's LinkedIn"
               >
-                <img src="vedran_mandic.jpg" alt="Vedran Mandić profile photo" height="268" />
+                <img src="assets/images/vedran_mandic.jpg" alt="Vedran Mandić profile photo" height="268" />
               </a>
             </div>
             <div class="item-caption py-3">
@@ -382,7 +371,7 @@
                 class="zoom-container"
                 title="Visit Marina's LinkedIn profile"
               >
-                <img src="marina_mandic.png" alt="Marina Mandić profile photo" style="object-position: 0 -40px;" />
+                <img src="assets/images/marina_mandic.png" alt="Marina Mandić profile photo" style="object-position: 0 -40px;" />
               </a>
             </div>
             <div class="item-caption py-3">
@@ -656,12 +645,11 @@
                   </span>
                   <div class="b-info b-adress">
                     <h6 class="align-left mbr-fonts-style display-7">
-                      Address:
+                      HQ Address:
                     </h6>
                     <p
                       class="mbr-text align-left mbr-fonts-style display-7"
-                    ></p>
-                    <p>
+                    >
                       <a
                         href="https://www.google.com/maps/place/Zagreb/@45.8428955,15.7995543,11z/data=!3m1!4b1!4m6!3m5!1s0x4765d692c902cc39:0x3a45249628fbc28a!8m2!3d45.8150108!4d15.9819189!16zL20vMGZoenk?entry=ttu"
                         class="text-primary"
@@ -682,14 +670,10 @@
                     <h6 class="align-left mbr-fonts-style display-7">Email:</h6>
                     <p class="mbr-text align-left mbr-fonts-style display-7">
                       <a
-                        href="mailto:mandic.vedran@gmail.com"
+                        href="mailto: info@functor-software.hr"
                         class="text-primary"
-                        >mandic.vedran@gmail.com</a
-                      ><br /><a
-                        href="mailto:marina.mandic09@gmail.com"
-                        class="text-primary"
-                        >marina.mandic09@gmail.com</a
-                      ><br />
+                        >info@functor-software.hr</a
+                      >
                     </p>
                   </div>
                 </div>
@@ -712,64 +696,10 @@
         </div>
       </div>
     </section>
-    <section
-      id="remove-me"
-      class="display-7"
-      style="
-        padding: 0;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-content: center;
-        display: flex;
-        position: relative;
-        height: 4rem;
-      "
-    >
-      <a
-        href="https://mobiri.se/539911"
-        style="
-          flex: 1 1;
-          height: 4rem;
-          position: absolute;
-          width: 100%;
-          z-index: 1;
-        "
-        ><img
-          alt=""
-          style="height: 4rem"
-          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-      /></a>
-      <p style="margin: 0; text-align: center" class="display-7">&#8204;</p>
-      <a
-        style="z-index: 1"
-        href="https://mobirise.com/builder/ai-website-maker.html"
-      ></a>
-    </section>
-    <script src="assets/popper/popper.min.js"></script>
-    <script src="assets/web/assets/jquery/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/tether/tether.min.js"></script>
-    <script src="assets/smoothscroll/smooth-scroll.js"></script>
-    <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-    <script src="assets/dropdown/js/nav-dropdown.js"></script>
-    <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-    <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-    <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-    <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-    <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-    <script src="assets/parallax/jarallax.min.js"></script>
-    <script src="assets/theme/js/script.js"></script>
-    <script src="assets/slidervideo/script.js"></script>
-    <script src="assets/formoid/formoid.min.js"></script>
+    <script src="assets/all.min.js"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9R4BQDXQ37"></script>
     <script>
-      // hide mobirise footer panel
-      document.addEventListener("DOMContentLoaded", () => {
-        document.querySelector("#remove-me").remove();
-      });
-
       // google tag manager / google analytics
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
