Add wai-aria labels to links and HTML lang=en

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -93,6 +93,7 @@
           <div class="navbar-brand">
             <span class="navbar-caption-wrap"
               ><a
+                aria-label="Click to go FUNCTOR-SOFTWARE.HR homepage"
                 class="nav-link link navbar-caption text-white text-primary display-4"
                 href="https://functor-software.hr/"
                 >functor-software.hr</a
@@ -104,6 +105,7 @@
           <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
             <li class="nav-item">
               <a
+                aria-label="Learn more about functor software"
                 class="nav-link link text-white text-primary display-4"
                 href="index.html#team1-i"
                 >About us</a
@@ -111,6 +113,7 @@
             </li>
             <li class="nav-item">
               <a
+                aria-label="Learn why choose functor software for your next project"
                 class="nav-link link text-white text-primary display-4"
                 href="index.html#step3-j"
                 >Why Choose Us?</a
@@ -119,6 +122,7 @@
           </ul>
           <div class="navbar-buttons mbr-section-btn">
             <a
+              aria-label="Click to contact functor software"
               class="btn btn-sm btn-primary display-5"
               href="index.html#form1-l"
               >Contact us<br
@@ -255,6 +259,7 @@
             </div>
           </div>
           <a
+            aria-label="next slide"
             data-app-prevent-settings=""
             class="carousel-control carousel-control-prev"
             role="button"
@@ -264,6 +269,7 @@
             ><span aria-hidden="true" class="mbri-left mbr-iconfont"></span
             ><span class="sr-only visually-hidden">Previous</span></a
           ><a
+            aria-label="previous slide"
             data-app-prevent-settings=""
             class="carousel-control carousel-control-next"
             role="button"
@@ -318,6 +324,7 @@
           <div class="team-item col-lg-3 col-md-6">
             <div class="item-image">
               <a
+                aria-label="Visit Vedran's LinkedIn"
                 href="https://www.linkedin.com/in/vedranmandic/?ref=https://functor-software.hr"
                 class="zoom-container"
                 title="Visit Vedran's LinkedIn"
@@ -338,12 +345,15 @@
                 </p>
               </div>
               <div class="item-social pt-2">
-                <a href="https://hachyderm.io/@vekzdran?ref=https://functor-software.hr" target="_blank">
+                <a 
+                aria-label="Visit Vedran's Mastodon profile"
+                href="https://hachyderm.io/@vekzdran?ref=https://functor-software.hr" target="_blank">
                   <span
                     class="p-1 mbr-iconfont mbr-iconfont-social socicon-mastodon socicon"
                   ></span>
                 </a>
                 <a
+                  aria-label="Visit Vedran's LinkedIn profile"
                   href="https://www.linkedin.com/in/vedranmandic/?ref=https://functor-software.hr"
                   target="_blank"
                 >
@@ -351,7 +361,9 @@
                     class="p-1 mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"
                   ></span>
                 </a>
-                <a href="https://github.com/vmandic?ref=https://functor-software.hr" target="_blank">
+                <a 
+                aria-label="Visit Vedran's Github profile"
+                href="https://github.com/vmandic?ref=https://functor-software.hr" target="_blank">
                   <span
                     class="p-1 mbr-iconfont mbr-iconfont-social mbri-github"
                     style="
@@ -367,6 +379,7 @@
           <div class="team-item col-lg-3 col-md-6">
             <div class="item-image">
               <a
+                aria-label="Visit Marina's LinkedIn profile"
                 href="https://www.linkedin.com/in/marina-mandi%C4%87-292a90a5/?ref=https://functor-software.hr"
                 class="zoom-container"
                 title="Visit Marina's LinkedIn profile"
@@ -384,6 +397,7 @@
               </div>
               <div class="item-social pt-2">
                 <a
+                  aria-label="Visit Marina's LinkedIn profile"
                   href="https://www.linkedin.com/in/marina-mandi%C4%87-292a90a5/?ref=https://functor-software.hr"
                   target="_blank"
                 >
@@ -391,12 +405,15 @@
                     class="p-1 mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"
                   ></span>
                 </a>
-                <a href="https://t.me/kejshica?ref=https://functor-software.hr" target="_blank">
+                <a
+                aria-label="Visit Marina's Telegram profile" 
+                href="https://t.me/kejshica?ref=https://functor-software.hr" target="_blank">
                   <span
                     class="p-1 mbr-iconfont mbr-iconfont-social socicon-telegram socicon"
                   ></span>
                 </a>
                 <a
+                  aria-label="Visit Marinas's freelance.hr profile"
                   href="https://www.freelance.hr/hr/freelancers/marina-mandic/5944?ref=https://functor-software.hr"
                   target="_blank"
                 >
@@ -651,6 +668,7 @@
                       class="mbr-text align-left mbr-fonts-style display-7"
                     >
                       <a
+                        aria-label="See where is Zagreb on Google maps"
                         href="https://www.google.com/maps/place/Zagreb/@45.8428955,15.7995543,11z/data=!3m1!4b1!4m6!3m5!1s0x4765d692c902cc39:0x3a45249628fbc28a!8m2!3d45.8150108!4d15.9819189!16zL20vMGZoenk?entry=ttu"
                         class="text-primary"
                         target="_blank"
@@ -670,6 +688,7 @@
                     <h6 class="align-left mbr-fonts-style display-7">Email:</h6>
                     <p class="mbr-text align-left mbr-fonts-style display-7">
                       <a
+                        aria-label="Click to send an email to functor software"
                         href="mailto: info@functor-software.hr"
                         class="text-primary"
                         >info@functor-software.hr</a
@@ -708,7 +727,9 @@
     </script>
 
     <div id="scrollToTop" class="scrollToTop mbr-arrow-up">
-      <a style="text-align: center"
+      <a
+      aria-label="Click to go back to the top of this website" 
+      style="text-align: center"
         ><i
           class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"
         ></i
