fix link and robots for better Lighthouse SEO score

--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
 
     <div id="scrollToTop" class="scrollToTop mbr-arrow-up">
       <a
+      href="#"
       aria-label="Click to go back to the top of this website" 
       style="text-align: center"
         ><i
